--- a/index.html
+++ b/index.html
@@ -7,11 +7,17 @@ ajouter les deux dates bts -->
 
 <html lang="en">
 <head>
+<meta name="keywords" content="Pierre Banwarth concertina accordéon musique irlandaise irish session full4 esling berny trad school music diato">
+<meta name="description" content="Site web professionnel de Pierre Banwarth musicien">
+<meta name="author" content="Pierre Banwarth">
+<meta name="copyright" content="Open Source">
+<meta http-equiv="content-type" content="text/html;UTF-8">
+<meta http-equiv="cache-control" content="cache">
+<meta http-equiv="content-language" content="en">
+
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Pierre Banwarth - Musicien</title>
-<meta name="description" content="">
-<meta name="author" content="">
 
 <!-- Favicons
     ================================================== -->
