few corrections on html and css

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ ajouter les deux dates bts -->
       <h3>Membres du groupe</h3>
       <div class="row">
         <div class="col-md-12">
-          <div class="bold">Maodez Arhant </div> Pipe, flutes
+          <div class="bold">Maodez Arhant </div> Uilleann pipes, flutes
         </div>
         <div class="col-md-12">
           <div class="bold">Tonin Jegou</div>Guitare
