few corrections on html and css

--- a/index.html
+++ b/index.html
@@ -120,7 +120,11 @@ ajouter les deux dates bts -->
     </div>
     <div class="row">
       <div class="coll-md-6">
-        <iframe width="640" height="360" src="https://www.youtube.com/embed/TjfHolfsA3Q?list=PLC0BokseKUjYczPLXKX9GO3wQpX9kseXl" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class="embedresize">
+          <div>
+            <iframe width="640" height="360" src="https://www.youtube.com/embed/TjfHolfsA3Q?list=PLC0BokseKUjYczPLXKX9GO3wQpX9kseXl" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </div>
       </div>
     </div>
     <h3>Premier Album</h3>
@@ -181,10 +185,18 @@ ajouter les deux dates bts -->
     <div class="row">
       <p>Nouveau dans le paysage de la musique Irlandaise. Esling, c'est une section rythmique aux accents groove et math rock au dessus de thèmes irlandais traditionnels ou de compositions du groupe, les 5 musiciens donnent une nouvelle version de ce que peut être la musique irlandaise actuelle.</p>
       <div class="coll-md-6">
-        <iframe width="727" height="409" src="https://www.youtube.com/embed/qFT5JTrtsh8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class="embedresize">
+          <div>
+            <iframe width="727" height="409" src="https://www.youtube.com/embed/qFT5JTrtsh8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </div>
       </div>
       <div class="coll-md-6">
-        <iframe width="727" height="409" src="https://www.youtube.com/embed/oMsgKinw0Gs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class="embedresize">
+          <div>
+            <iframe width="727" height="409" src="https://www.youtube.com/embed/oMsgKinw0Gs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </div>
       </div>
       <div class="col-md-12 text-center"><img src="img/bands/esling.jpg" class="img-responsive"></div>
     </div>
@@ -229,7 +241,11 @@ ajouter les deux dates bts -->
     </div>
     <div class="row">
       <div class="coll-md-6">
-        <iframe width="640" height="360" src="https://www.youtube.com/embed/YKlTfhMrnJY?list=PLC0BokseKUjYczPLXKX9GO3wQpX9kseXl" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class="embedresize">
+          <div>
+            <iframe width="640" height="360" src="https://www.youtube.com/embed/YKlTfhMrnJY?list=PLC0BokseKUjYczPLXKX9GO3wQpX9kseXl" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </div>
       </div>
       <div class="col-md-12 text-center"><img src="img/bands/full4.jpg" class="img-responsive"></div>
 
@@ -360,12 +376,20 @@ ajouter les deux dates bts -->
 
     <div class="row">
       <div class="coll-md-6">
-        <iframe width="640" height="360" src="https://www.youtube.com/embed/Mpow87xNm4Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class="embedresize">
+          <div>
+            <iframe width="640" height="360" src="https://www.youtube.com/embed/Mpow87xNm4Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </div>
       </div>
     </div>
     <div class="row">
       <div class="coll-md-6">
-        <iframe width="727" height="409" src="https://www.youtube.com/embed/G6iePFmdnJg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class="embedresize">
+          <div>
+            <iframe width="727" height="409" src="https://www.youtube.com/embed/G6iePFmdnJg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </div>
       </div>
     </div>
 
