few corrections on html and css

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ ajouter les deux dates bts -->
     <div class="container">
       <div class="row">
         <div class="intro-text">
-          <h1><span class="name">Pierre Banwarth</span></h1>
+          <!-- <h1><span class="name">Pierre Banwarth</span></h1> -->
           <!-- <p>Musicien</p> -->
           <a href="#about" class="btn btn-default btn-lg page-scroll">En savoir plus</a> </div>
       </div>
@@ -97,10 +97,8 @@ ajouter les deux dates bts -->
       <div class="col-md-12 text-center"><img src="img/about.jpg" class="img-responsive"></div>
       <div class="col-md-8 col-md-offset-2">
         <div class="about-text">
-          <p>Passionné par les musiques traditionnelles et l'accordéon en général je pratique la musique Irlandaise depuis bientôt 20 ans et le concertina depuis 10 ans.</p>
-          <p>Je suis toujours a la recherche de nouvelles rencontres, de nouveaux répertoires, et de nouveaux sons</p>
-          <p>Outre ma pratique musicale j'explore les possibilités de l'impression 3D sur mon instrument et j'ai construit un Concertina MIDI</p>
-
+          <p>Passionné par les musiques traditionnelles et l'accordéon en général, je pratique la musique Irlandaise et les musiques du centre-france depuis bientôt 20 ans et le concertina depuis 10 ans.</p>
+          <p>Outre ma pratique musicale j'explore les possibilités de l'impression 3D sur mon instrument et j'ai construit un Concertina MIDI.</p>
           <!-- <p class="text-center"><a class="btn btn-primary" href="#"><i class="fa fa-download"></i> Tu veux mon CV ?</a></p> -->
         </div>
       </div>
@@ -165,7 +163,7 @@ ajouter les deux dates bts -->
       </div>
     </div>
     <div class="links-to-find-us">
-      Quelques lien pour nous retrouver :
+      Quelques liens pour nous retrouver :
       <div class="row">
 
         <a href="mailto:BernyTradSchool@gmail.com" target="_blank"> <i class="fa fa-envelope-o band-facebook"></i></a>
@@ -183,11 +181,11 @@ ajouter les deux dates bts -->
       <hr>
     </div>
     <div class="row">
-      <p>Nouveau dans le paysage de la musique Irlandaise. Esling, c'est une section rythmique aux accents groove et math rock au dessus de thèmes irlandais traditionnels ou de compositions du groupe, les 5 musiciens donnent une nouvelle version de ce que peut être la musique irlandaise actuelle.</p>
+      <p>Nouveau dans le paysage de la musique irlandaise. Esling, c'est une section rythmique aux accents groove et math rock au dessus de thèmes irlandais traditionnels ou de compositions du groupe, les cinq musiciens donnent une nouvelle version de ce que peut être la musique irlandaise actuelle.</p>
       <div class="coll-md-6">
         <div class="embedresize">
           <div>
-            <iframe width="727" height="409" src="https://www.youtube.com/embed/qFT5JTrtsh8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="727" height="409" src="https://www.é.com/embed/qFT5JTrtsh8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </div>
       </div>
@@ -221,7 +219,7 @@ ajouter les deux dates bts -->
       </div>
     </div>
     <div class="links-to-find-us">
-      Quelques lien pour nous retrouver :
+      Quelques liens pour nous retrouver :
       <div class="row">
         <a href="mailto:esling.booking@gmail.com" target="_blank"> <i class="fa fa-envelope-o band-facebook"></i></a>
         <a href="https://www.facebook.com/EslingMusic/" target="_blank"><i class="fa fa-facebook band-facebook"></i></a>
@@ -236,7 +234,7 @@ ajouter les deux dates bts -->
       <hr>
     </div>
     <div class="row">
-      <p> Full 4 est un trio de musique Irlandaise qui joue chaque morceau comme si c'etait son dernier.
+      <p> Full 4 est un trio de musique irlandaise qui joue chaque morceau comme si c'etait son dernier.
        La discussion animée entre le uilleann pipes et le concertina soutenu par la guitare vous permettra sans doute d'entrevoir la connivence entre ces trois musiciens.</p>
     </div>
     <div class="row">
@@ -266,7 +264,7 @@ ajouter les deux dates bts -->
       </div>
     </div>
     <div class="links-to-find-us">
-      Quelques lien pour nous retrouver :
+      Quelques liens pour nous retrouver :
       <div class="row">
         <a href="mailto:full4music@gmail.com" target="_blank"> <i class="fa fa-envelope-o band-facebook"></i></a>
         <a href="https://www.facebook.com/Full4Music/" target="_blank"><i class="fa fa-facebook band-facebook"></i></a>
@@ -284,8 +282,8 @@ ajouter les deux dates bts -->
       <hr>
     </div>
     <div class="categories">
-      <p>J'ai toujours démonté mon concertina dabord par necessité pour des réparations puis j'ai utilisé les opportunités offertes par l'impression 3D</p>
-      <p>Frustré de ne pas pouvoir jouer la nuit j'ai décidé de construire une version electronique de mon instrument
+      <p>Informaticien de formation et intéressé par les possibilités de l'impression 3D, J'ai décidé de construire une version electronique de mon instrument
+      <p> le but etant de pouvoir jouer au casque et explorer de nouvelle sonorité (MIDI, Ableton)</p>
       En 2019 après trois ans de travail j'ai réussi a créer une version fonctionnelle du Concertina MIDI.</p>
       <p>En parallele de mes recherches sur la version electronique du concertina, j'ai scanné et imprimé en 3D les grilles de mon concertina</p>
     </div>
@@ -303,66 +301,66 @@ ajouter les deux dates bts -->
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 app">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/02-large.jpg" title="Project description" rel="prettyPhoto">
+            <div class="hover-bg"> <a href="img/portfolio/02-large.jpg" title="Retrouvez la grille originale" rel="prettyPhoto">
               <div class="hover-text">
-                <h4>Project Title</h4>
-                <small>App Development</small> </div>
-              <img src="img/portfolio/02-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+                <h4>Première modelisation 3D de ma grille de concertina</h4>
+                <small></small> </div>
+              <img src="img/portfolio/02-small.jpg" class="img-responsive" alt="Première modélisation"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 web">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/03-large.jpg" title="Modélisation des grilles en 3D" rel="prettyPhoto">
               <div class="hover-text">
-                <h4>Modélisation 3D</h4>
+                <h4>Quelques versions de ma grille imprimés en 3D</h4>
               </div>
-              <img src="img/portfolio/03-small.jpg" class="img-responsive" alt="A partir d'un scan de la grille à plat"> </a> </div>
+              <img src="img/portfolio/03-small.jpg" class="img-responsive" alt="Prototypes"> </a> </div>
           </div>
         </div>
 
         <div class="col-sm-6 col-md-3 col-lg-3 web">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/08-large.jpg" title="Project description" rel="prettyPhoto">
+            <div class="hover-bg"> <a href="img/portfolio/08-large.jpg" title="Premiers tests de montage sur le concertina MIDI" rel="prettyPhoto">
               <div class="hover-text">
-                <h4>Project Title</h4>
-                <small>Web Design</small> </div>
-              <img src="img/portfolio/08-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+                <h4>Concertina MIDI</h4>
+                <small></small> </div>
+              <img src="img/portfolio/08-small.jpg" class="img-responsive" alt="Concertina MIDI"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 app">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/05-large.jpg" title="Project description" rel="prettyPhoto">
+            <div class="hover-bg"> <a href="img/portfolio/05-large.jpg" title="Création d'un circuit imprimé qui acceuil un Arduino Nano et les Boutons de clavier mécaniques" rel="prettyPhoto">
               <div class="hover-text">
-                <h4>Project Title</h4>
-                <small>App Development</small> </div>
-              <img src="img/portfolio/05-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+                <h4>Circuit imprimé </h4>
+                <small>Création d'un circuit custom</small> </div>
+              <img src="img/portfolio/05-small.jpg" class="img-responsive" alt="Circuit imprimé"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 branding">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/06-large.jpg" title="Project description" rel="prettyPhoto">
+            <div class="hover-bg"> <a href="img/portfolio/06-large.jpg" title="Tests de conception 3D de la grille pour le concertina MIDI" rel="prettyPhoto">
               <div class="hover-text">
-                <h4>Project Title</h4>
+                <h4>Montage du circuit sur une grille</h4>
                 <small>Branding</small> </div>
-              <img src="img/portfolio/06-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="img/portfolio/06-small.jpg" class="img-responsive" alt="Test de grille"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 branding app">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/07-large.jpg" title="Project description" rel="prettyPhoto">
+            <div class="hover-bg"> <a href="img/portfolio/07-large.jpg" title="Montage final avant les premiers tests" rel="prettyPhoto">
               <div class="hover-text">
-                <h4>Project Title</h4>
-                <small>App Development, Branding</small> </div>
-              <img src="img/portfolio/07-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+                <h4>Montage vu de dessus</h4>
+                <small>Circuit + barre + Boutons</small> </div>
+              <img src="img/portfolio/07-small.jpg" class="img-responsive" alt="Derniers montages"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 web">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/04-large.jpg" title="Project description" rel="prettyPhoto">
+            <div class="hover-bg"> <a href="img/portfolio/04-large.jpg" title="Réalisaton d'une grille pour les festivals" rel="prettyPhoto">
               <div class="hover-text">
-                <h4>Project Title</h4>
+                <h4>Grilles a LED</h4>
                 <small>Web Design</small> </div>
-              <img src="img/portfolio/04-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="img/portfolio/04-small.jpg" class="img-responsive" alt="Grilles a LEDs"> </a> </div>
           </div>
         </div>
       </div>
