few corrections on html and css

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ ajouter les deux dates bts -->
       <div class="col-md-12 text-center"><img src="img/about.jpg" class="img-responsive"></div>
       <div class="col-md-8 col-md-offset-2">
         <div class="about-text">
-          <p>Passionné par les musiques traditionnelles et l'accordéon en général, je pratique la musique Irlandaise et les musiques du centre-france depuis bientôt 20 ans et le concertina depuis 10 ans.</p>
+          <p>Passionné par le concertina, je pratique la musique Irlandaise et les musiques du centre-france depuis bientôt 20 ans et le concertina depuis 10 ans.</p>
           <p>Outre ma pratique musicale j'explore les possibilités de l'impression 3D sur mon instrument et j'ai construit un Concertina MIDI.</p>
           <!-- <p class="text-center"><a class="btn btn-primary" href="#"><i class="fa fa-download"></i> Tu veux mon CV ?</a></p> -->
         </div>
@@ -282,11 +282,9 @@ ajouter les deux dates bts -->
       <hr>
     </div>
     <div class="categories">
-      <p>Informaticien de formation et intéressé par les possibilités de l'impression 3D, J'ai décidé de construire une version electronique de mon instrument
-      <p> le but etant de pouvoir jouer au casque et explorer de nouvelle sonorité (MIDI, Ableton)</p>
-      En 2019 après trois ans de travail j'ai réussi a créer une version fonctionnelle du Concertina MIDI.</p>
-      <p>En parallele de mes recherches sur la version electronique du concertina, j'ai scanné et imprimé en 3D les grilles de mon concertina</p>
-    </div>
+      <p>Informaticien de formation et intéressé par les possibilités de l'impression 3D, j'ai décidé de construire une version electronique de mon instrument.
+      <p> Le but etant de pouvoir jouer au casque et explorer de nouvelles sonorités (MIDI, Ableton)</p>
+      En 2019 après trois ans de travail, j'ai réussi à créer une version fonctionnelle du Concertina MIDI.</p>
     <div class="row">
       <div class="portfolio-items">
         <div class="col-sm-6 col-md-3 col-lg-3 web">
@@ -368,7 +366,7 @@ ajouter les deux dates bts -->
 
     <p>Pour plus d'informations vous pouvez directement allez voir :</p>
 
-    <a href="https://ouiaremakers.com/posts/tutoriel-diy-creation-d-un-accordeon-midi" target="_blank"><p>Un tutoriel en français vainqueur du prix OuiAreMaker 2017</p></a>
+    <a href="https://ouiaremakers.com/posts/tutoriel-diy-creation-d-un-accordeon-midi" target="_blank"><p>Mon tutoriel en français (vainqueur du prix OuiAreMaker 2017)</p></a>
 
     <a href="https://github.com/PierreBanwarth/MIDI-concertina" target="_blank"><p><p>La page Github du projet</p></p></a>
 
