--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ ajouter les deux dates bts -->
 <html lang="en">
 <head>
 <meta name="keywords" content="Pierre Banwarth concertina accordéon musique irlandaise irish session full4 esling berny trad school music diato">
-<meta name="description" content="Site web professionnel de Pierre Banwarth musicien">
+<meta name="description" content="Site web professionnel de Pierre Banwarth musicien dans les groupes Esling, Berny Trad School et Full 4">
 <meta name="author" content="Pierre Banwarth">
 <meta name="copyright" content="Open Source">
 <meta http-equiv="content-type" content="text/html;UTF-8">
