--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ ajouter les deux dates bts -->
     </div>
     <div class="row">
       <div class="coll-md-6">
-        <div class="embedresize">
+        <div class="embedresize video-youtube">
           <div>
             <iframe width="640" height="360" src="https://www.youtube.com/embed/TjfHolfsA3Q?list=PLC0BokseKUjYczPLXKX9GO3wQpX9kseXl" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
@@ -183,14 +183,14 @@ ajouter les deux dates bts -->
     <div class="row">
       <p>Nouveau dans le paysage de la musique irlandaise. Esling, c'est une section rythmique aux accents groove et math rock au dessus de thèmes irlandais traditionnels ou de compositions du groupe, les cinq musiciens donnent une nouvelle version de ce que peut être la musique irlandaise actuelle.</p>
       <div class="coll-md-6">
-        <div class="embedresize">
+        <div class="embedresize video-youtube">
           <div>
             <iframe width="727" height="409" src="https://www.youtube.com/embed/qFT5JTrtsh8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </div>
       </div>
       <div class="coll-md-6">
-        <div class="embedresize">
+        <div class="embedresize video-youtube">
           <div>
             <iframe width="727" height="409" src="https://www.youtube.com/embed/oMsgKinw0Gs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
@@ -239,9 +239,9 @@ ajouter les deux dates bts -->
     </div>
     <div class="row">
       <div class="coll-md-6">
-        <div class="embedresize">
+        <div class="embedresize video-youtube">
           <div>
-            <iframe width="640" height="360" src="https://www.youtube.com/embed/YKlTfhMrnJY?list=PLC0BokseKUjYczPLXKX9GO3wQpX9kseXl" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="640" height="360" src="https://www.youtube.com/embed/dUiMz7hjGhQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </div>
       </div>
@@ -372,7 +372,7 @@ ajouter les deux dates bts -->
 
     <div class="row">
       <div class="coll-md-6">
-        <div class="embedresize">
+        <div class="embedresize video-youtube">
           <div>
             <iframe width="640" height="360" src="https://www.youtube.com/embed/Mpow87xNm4Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
@@ -381,7 +381,7 @@ ajouter les deux dates bts -->
     </div>
     <div class="row">
       <div class="coll-md-6">
-        <div class="embedresize">
+        <div class="embedresize video-youtube">
           <div>
             <iframe width="727" height="409" src="https://www.youtube.com/embed/G6iePFmdnJg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
