add events links

--- a/index.html
+++ b/index.html
@@ -434,9 +434,11 @@ ajouter les deux dates bts -->
             </div>
           </li>
           <li class="timeline-inverted">
-            <div class="timeline-image">
-              <h4> 6 </br> Juillet </br> 2019 </h4>
-            </div>
+              <div class="timeline-image">
+                <h4> 6 </br> Juillet </br> 2019 </h4>
+
+
+              </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
                 <h4>Deuxième édition des Noctambals</h4>
@@ -444,6 +446,10 @@ ajouter les deux dates bts -->
               </div>
               <div class="timeline-body">
                 <p>Bal Folk/Fest Noz en compagnie du Duo T'en Bal, et du Duo Sylvain Barou Fred Guichen !</p>
+                <a href="https://www.facebook.com/events/2281465255247741/permalink/2425353807525551/" target="_blank" class="event-link">
+                  Lien vers l'événement
+                </a>
+
               </div>
             </div>
           </li>
@@ -473,6 +479,9 @@ ajouter les deux dates bts -->
               </div>
               <div class="timeline-body">
                 <p>WOooooooooooooooooooooo !! COMBOROS !! COMBOROS !! COMBOROS !! COMBOROS !! COMBOROS !! </p>
+                <a href="https://www.facebook.com/events/548683042223951/" target="_blank" class="event-link">
+                  Lien vers l'événement
+                </a>
               </div>
             </div>
           </li>
