--- a/demarchage.html
+++ b/demarchage.html
@@ -681,7 +681,7 @@ Fort de nombreux bals en France et en Europe, le groupe sort un CD fin 2018.<br>
         <tr>
             <td class="mcnImageCardBlockInner" valign="top" style="padding-top:9px; padding-right:18px; padding-bottom:9px; padding-left:18px;">
 
-<table align="center" border="0" cellpadding="0" cellspacing="0" class="mcnImageCardBottomContent" width="100%" style="background-color: #404040;">
+<table align="center" border="0" cellpadding="0" cellspacing="0" class="mcnImageCardBottomContent" width="100%">
     <tbody><tr>
         <td class="mcnImageCardBottomImageContent" align="center" valign="top" style="padding-top:0px; padding-right:0px; padding-bottom:0; padding-left:0px;">
 
